Fix styling of social links on smaller screens

--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -25,8 +25,8 @@ h1, h2, h3, .links{
 }
 
 .links img {
-    height: 20px;
-    margin:0 30px;
+    height:20px;
+    margin:10px 30px;
 }
 
 a{
